change absolute to relative ing widths (Fixes #81)

--- a/documentation/operators/all.html
+++ b/documentation/operators/all.html
@@ -13,7 +13,7 @@ id: all
    <h1>All</h1>
    <h3>determine whether all items emitted by an Observable meet some criteria</h3>
    <figure>
-    <img src="images/all.C.png" width="640" alt="All" />
+    <img src="images/all.C.png" width="100%" alt="All" />
     <figcaption><p>
     Pass a predicate function to the <span class="operator">All</span> operator that accepts an item
     emitted by the source Observable and returns a boolean value based on an evaluation of that
@@ -47,7 +47,7 @@ id: all
 
   {% lang_operator RxGroovy all %}
      <figure>
-      <img src="images/all.png" width="640" alt="all" />
+      <img src="images/all.png" width="100%" alt="all" />
       <figcaption><p>
        RxGroovy implements this operator as <code>all</code>. It does not by default operate on any
        particular <a href="../scheduler.html">Scheduler</a>. The following example shows how to use this
@@ -75,7 +75,7 @@ true</pre></div>
 
   {% lang_operator RxJava all %}
      <figure>
-      <img src="images/all.png" width="640" alt="all" />
+      <img src="images/all.png" width="100%" alt="all" />
       <figcaption><p>
        RxJava implements this operator as <code>all</code>. It does not by default operate on any
        particular <a href="../scheduler.html">Scheduler</a>.
@@ -87,7 +87,7 @@ true</pre></div>
 
   {% lang_operator RxJS every %}
      <figure>
-      <img src="images/every.png" width="640" alt="every" />
+      <img src="images/every.png" width="100%" alt="every" />
       <figcaption><p>
        RxJS implements this operator as <code>every</code>. The following example shows how to use
        this operator:
