--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -13,7 +13,7 @@ id: and-then-when
    <h1>And/Then/When</h1>
    <h3>combine sets of items emitted by two or more Observables by means of Pattern and Plan intermediaries</h3>
    <figure>
-    <img src="images/and_then_when.C.png" width="640" alt="And/Then/When" />
+    <img src="images/and_then_when.C.png" width="100%" alt="And/Then/When" />
     <figcaption><p>
     The combination of the <span class="operator">And</span>, <span class="operator">Then</span>,
     and <span class="operator">When</span> operators behave much like the
@@ -49,7 +49,7 @@ id: and-then-when
 
   {% lang_operator RxGroovy and then when %}
      <figure>
-      <img src="images/and_then_when.png" width="640" alt="and/then/when" />
+      <img src="images/and_then_when.png" width="100%" alt="and/then/when" />
       <figcpation><p>
        In RxGroovy, these are not part of the core ReactiveX implementation, but are found as
        <code>and</code>, <code>then</code>, and <code>when</code> in the
@@ -60,7 +60,7 @@ id: and-then-when
 
   {% lang_operator RxJava and then when %}
      <figure>
-      <img src="images/and_then_when.png" width="640" alt="and/then/when" />
+      <img src="images/and_then_when.png" width="100%" alt="and/then/when" />
       <figcpation><p>
        These are not part of the core RxJava implementation, but are found as <code>and</code>,
        <code>then</code>, and <code>when</code> in the <code>rxjava-joins</code> module.
@@ -70,7 +70,7 @@ id: and-then-when
 
   {% lang_operator RxJS and thenDo when %}
      <figure>
-      <img src="images/and_thenDo_when.png" width="640" alt="and/thenDo/when" />
+      <img src="images/and_thenDo_when.png" width="100%" alt="and/thenDo/when" />
       <figcpation><p>
        RxJS implements these operators as <code>and</code>, <code>thenDo</code>, and
        <code>when</code>.
