--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -14,7 +14,7 @@ id: combinelatest
    <h3>when an item is emitted by either of two Observables, combine the latest item emitted by each Observable via a specified function and emit items based on the results of this function</h3>
 
    <figure>
-    <img src="images/combineLatest.c.png" width="640" alt="CombineLatest" />
+    <img src="images/combineLatest.c.png" width="100%" alt="CombineLatest" />
     <figcaption><p>
      The <span class="operator">CombineLatest</span> operator behaves in a similar way to
      <span class="operator">Zip</span>, but while <span class="operator">Zip</span> emits items only
@@ -51,7 +51,7 @@ id: combinelatest
 
   {% lang_operator RxGroovy combineLatest %}
      <figure>
-      <img src="images/combineLatest.png" width="640" alt="combineLatest" />
+      <img src="images/combineLatest.png" width="100%" alt="combineLatest" />
       <figcaption><p>
        RxGroovy implements this operator as <code>combineLatest</code>. It may take between two and
        nine Observables (as well as the combining function) as parameters, or a single
@@ -67,7 +67,7 @@ id: combinelatest
 
   {% lang_operator RxJava combineLatest %}
      <figure>
-      <img src="images/combineLatest.png" width="640" alt="combineLatest" />
+      <img src="images/combineLatest.png" width="100%" alt="combineLatest" />
       <figcaption><p>
        RxJava implements this operator as <code>combineLatest</code>. It may take between two and
        nine Observables (as well as the combining function) as parameters, or a single
@@ -83,7 +83,7 @@ id: combinelatest
 
   {% lang_operator RxJS combineLatest withLatestFrom %}
      <figure>
-      <img src="images/combineLatest.png" width="640" alt="combineLatest" />
+      <img src="images/combineLatest.png" width="100%" alt="combineLatest" />
       <figcaption><p>
        RxJS implements this operator as <code>combineLatest</code>. It may take a variable number
        of individual Observables (as well as the combining function) as parameters, or a single
@@ -123,7 +123,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/withLatestFrom.png" width="640" alt="withLatestFrom" />
+      <img src="images/withLatestFrom.png" width="100%" alt="withLatestFrom" />
       <figcaption><p>
        RxJS also has a <code>withLatestFrom</code> operator. It is similar to <code>combineLatest</code>, but
        only emits items when the single source Observable emits an item (not when <em>any</em> of the
