--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -13,7 +13,7 @@ id: concat
    <h1>Concat</h1>
    <h3>emit the emissions from two or more Observables without interleaving them</h3>
    <figure>
-    <img src="images/concat.C.png" width="640" alt="Concat" />
+    <img src="images/concat.C.png" width="100%" alt="Concat" />
     <figcaption><p>
      The <span class="operator">Concat</span> operator concatenates the output of multiple
      Observables so that they act like a single Observable, with all of the items emitted by the
@@ -52,14 +52,14 @@ id: concat
 
   {% lang_operator RxClojure concat concat* %}
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
       <figcaption><p>
        In RxClojure <code>concat</code> concatenates some number of individual Observables together
        in the order in which they are given.
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/concatX.png" width="640" alt="concat*" />
+      <img src="images/concatX.png" width="100%" alt="concat*" />
       <figcaption><p>
        The <code>concat*</code> operator concatenates the Observables emitted by an Observable
        together, in the order in which they are emitted.
@@ -72,13 +72,13 @@ id: concat
       RxCpp implements this operator as <code>concat</code>:
      </p>
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
      </figure>
   {% endlang_operator %}
 
   {% lang_operator RxGroovy concat concatWith %}
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
       <figcaption><p>
        RxGroovy implements this operator as <code>concat</code>. There are variants of this operator
        that take between two and nine Observables as parameters, and that concatenate them in the
@@ -121,7 +121,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava concat concatWith %}
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
       <figcaption><p>
        RxJava implements this operator as <code>concat</code>. There are variants of this operator
        that take between two and nine Observables as parameters, and that concatenate them in the
@@ -148,7 +148,7 @@ Sequence complete</pre></div>
       RxJS implements this operator as <code>concat</code> and <code>concatAll</code>.
      </p>
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
       <figcaption><p>
        <code>concat</code> takes a variable number of Observables (or Promises) as parameters (or a
        single array of Observables or Promises), and concatenates them in the order they appear in
@@ -157,7 +157,7 @@ Sequence complete</pre></div>
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/concatAll.png" width="640" alt="concatAll" />
+      <img src="images/concatAll.png" width="100%" alt="concatAll" />
       <figcaption><p>
        <code>concatAll</code> is an instance method that operates on an Observable of Observables,
        concatinating each of these Observables in the order they are emitted.
@@ -179,7 +179,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxKotlin concat concatWith %}
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
       <figcaption><p>
        RxKotlin implements this operator as <code>concat</code>. There are variants of this operator
        that take between two and nine Observables as parameters, and that concatenate them in the
@@ -196,7 +196,7 @@ Sequence complete</pre></div>
 
   {% lang_operator Rx.NET Concat %}
      <figure>
-      <img src="images/concat.C.png" width="640" alt="Concat" />
+      <img src="images/concat.C.png" width="100%" alt="Concat" />
       <figcaption><p>
        Rx.NET implements this operator as <code>Concat</code>. It accepts either an enumerable of
        Observables, an Observable of Observables, or two Observables as parameters, and concatenates
@@ -207,7 +207,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxPY concat concatAll %}
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
       <figcaption><p>
        In RxPY <code>concat</code> takes a variable number of Observables as parameters (or an
        array of Observables), and concatenates them in the order they appear in the parameter list
@@ -215,7 +215,7 @@ Sequence complete</pre></div>
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/concat_all.png" width="640" alt="concat_all" />
+      <img src="images/concat_all.png" width="100%" alt="concat_all" />
       <figcaption><p>
        <code>concatAll</code> operates on an Observable of Observables, concatinating each of these
        Observables in the order they are emitted.
@@ -225,14 +225,14 @@ Sequence complete</pre></div>
 
   {% lang_operator Rx.rb concat merge_all %}
      <figure>
-      <img src="images/concat.png" width="640" alt="concat" />
+      <img src="images/concat.png" width="100%" alt="concat" />
       <figcaption><p>
        In Rx.rb, the <code>concat</code> operator operates on two Observables as an instance
        operator, or on an array of Observables as a class method.
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/merge_all.png" width="640" alt="merge_all" />
+      <img src="images/merge_all.png" width="100%" alt="merge_all" />
       <figcaption><p>
        The <code>merge_all</code> operator, despite its name, really behaves like a
        <span class="operator">Concat</span> variant in Rx.rb. It accepts an Observable of
@@ -249,7 +249,7 @@ Sequence complete</pre></div>
       concatenates one Observable to another.
      </p>
      <figure>
-      <img src="images/plusplus.png" width="640" alt="plus-plus" />
+      <img src="images/plusplus.png" width="100%" alt="plus-plus" />
      </figure>
   {% endlang_operator %}
 
