--- a/documentation/operators/count.html
+++ b/documentation/operators/count.html
@@ -13,7 +13,7 @@ id: count
    <h1>Count</h1>
    <h3>count the number of items emitted by the source Observable and emit only this value</h3>
    <figure>
-    <img src="images/Count.png" width="640" alt="Count" />
+    <img src="images/Count.png" width="100%" alt="Count" />
     <figcaption><p>
      The <span class="operator">Count</span> operator transforms an Observable that emits items into
      an Observable that emits a single value that represents the number of items emitted by the
