--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -14,7 +14,7 @@ id: debounce
    <h3>only emit an item from an Observable if a particular timespan has passed without it emitting another item</h3>
 
    <figure>
-    <img src="images/debounce.c.png" width="640" alt="Debounce" />
+    <img src="images/debounce.c.png" width="100%" alt="Debounce" />
     <figcaption><p>
      The <span class="operator">Debounce</span> operator filters out items emitted by the source Observable that
      are rapidly followed by another emitted item.
@@ -54,7 +54,7 @@ id: debounce
       not trigger a throttle.
      </p>
      <figure>
-      <img src="images/debounce.png" width="640" alt="debounce" />
+      <img src="images/debounce.png" width="100%" alt="debounce" />
       <figcaption><p>
        One variant of <code>throtleWithTimeout</code>/<code>debounce</code> (two names for the same operator
        variant) throttles at a periodic time interval that you choose by passing in a <code>TimeUnit</code> and
@@ -70,7 +70,7 @@ id: debounce
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/debounce.f.png" width="640" alt="debounce" />
+      <img src="images/debounce.f.png" width="100%" alt="debounce" />
       <figcaption><p>
        There ia also a variant of <code>debounce</code> (that does not have a <code>throttleWithTimeout</code>
        alias) that throttles the source Observable by applying a function to each item it emits, this function
@@ -96,7 +96,7 @@ id: debounce
       not trigger a throttle.
      </p>
      <figure>
-      <img src="images/debounce.png" width="640" alt="debounce" />
+      <img src="images/debounce.png" width="100%" alt="debounce" />
       <figcaption><p>
        One variant of <code>throtleWithTimeout</code>/<code>debounce</code> (two names for the same operator
        variant) throttles at a periodic time interval that you choose by passing in a <code>TimeUnit</code> and
@@ -112,7 +112,7 @@ id: debounce
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/debounce.f.png" width="640" alt="debounce" />
+      <img src="images/debounce.f.png" width="100%" alt="debounce" />
       <figcaption><p>
        There ia also a variant of <code>debounce</code> (that does not have a <code>throttleWithTimeout</code>
        alias) that throttles the source Observable by applying a function to each item it emits, this function
@@ -130,7 +130,7 @@ id: debounce
 
   {% lang_operator RxJS debounce debounceWithSelector throttleWithTimeout %}
      <figure>
-      <img src="images/debounce.png" width="640" alt="debounce" />
+      <img src="images/debounce.png" width="100%" alt="debounce" />
       <figcaption><p>
        The first variant &mdash; called either <code>debounce</code> or <code>throttleWithTimeout</code> &mdash;
        accepts as its parameter a duration, defined as an integer number of milliseconds, and it suppresses any
@@ -174,7 +174,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/debounceWithSelector.png" width="640" alt="debounceWithSelector" />
+      <img src="images/debounceWithSelector.png" width="100%" alt="debounceWithSelector" />
       <figcaption><p>
        The <code>debounceWithSelector</code> operator throttles the source Observable by applying a function to
        each item it emits, this function generating an Observable. If the source Observable emits another item
