--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -14,7 +14,7 @@ id: elementAt
    <h3>emit only item <i>n</i> emitted by an Observable</h3>
 
    <figure>
-    <img src="images/elementAt.c.png" width="640" alt="ElementAt" />
+    <img src="images/elementAt.c.png" width="100%" alt="ElementAt" />
     <figcaption><p>
      The <code>ElementAt</code> operator pulls an item located at a specified index location in the sequence
      of items emitted by the source Observable and emits that item as its own sole emission.
@@ -45,7 +45,7 @@ id: elementAt
 
   {% lang_operator RxGroovy elementAt elementAtOrDefault %}
      <figure>
-      <img src="images/elementAt.png" width="640" alt="elementAt" />
+      <img src="images/elementAt.png" width="100%" alt="elementAt" />
       <figcaption><p>
        RxGroovy implements this operator as <code>elementAt</code>. Pass <code>elementAt</code> a zero-based
        index value and it will emit the solitary item from the source Observable&#8217;s sequence that matches
@@ -61,7 +61,7 @@ id: elementAt
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/elementAtOrDefault.png" width="640" alt="elementAtOrDefault" />
+      <img src="images/elementAtOrDefault.png" width="100%" alt="elementAtOrDefault" />
       <figcaption><p>
        RxGroovy also implements the <code>elementAtOrDefault</code> operator. It differs from
        <code>elementAt</code> in that it will not throw an exception if the source Observable emits fewer than
@@ -83,7 +83,7 @@ id: elementAt
 
   {% lang_operator RxJava elementAt elementAtOrDefault %}
      <figure>
-      <img src="images/elementAt.png" width="640" alt="elementAt" />
+      <img src="images/elementAt.png" width="100%" alt="elementAt" />
       <figcaption><p>
        RxGroovy implements this operator as <code>elementAt</code>. Pass <code>elementAt</code> a zero-based
        index value and it will emit the solitary item from the source Observable&#8217;s sequence that matches
@@ -99,7 +99,7 @@ id: elementAt
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/elementAtOrDefault.png" width="640" alt="elementAtOrDefault" />
+      <img src="images/elementAtOrDefault.png" width="100%" alt="elementAtOrDefault" />
       <figcaption><p>
        RxGroovy also implements the <code>elementAtOrDefault</code> operator. It differs from
        <code>elementAt</code> in that it will not throw an exception if the source Observable emits fewer than
@@ -121,7 +121,7 @@ id: elementAt
 
   {% lang_operator RxJS elementAt elementAtOrDefault %}
      <figure>
-      <img src="images/elementAt.png" width="640" alt="elementAt" />
+      <img src="images/elementAt.png" width="100%" alt="elementAt" />
       <figcaption><p>
        RxJS implements this operator as <code>elementAt</code>. Pass <code>elementAt</code> a zero-based
        index value and it will emit the solitary item from the source Observable&#8217;s sequence that matches
@@ -145,7 +145,7 @@ Next: 2
 Completed</pre></div></figcaption>
      </figure>
      <figure>
-      <img src="images/elementAtOrDefault.png" width="640" alt="elementAtOrDefault" />
+      <img src="images/elementAtOrDefault.png" width="100%" alt="elementAtOrDefault" />
       <figcaption><p>
        The <code>elementAtOrDefault</code> operator is similar, except that if there is no element in the
        source sequence with the index value you specify, it will emit a default value of your choosing (rather
