--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -14,7 +14,7 @@ id: from
 <h3>convert various other objects and data types into Observables</h3>
 
 <figure>
- <img src="images/from.c.png" width="640" alt="From" />
+ <img src="images/from.c.png" width="100%" alt="From" />
  <figcaption><p>
   When you work with Observables, it can be more convenient if all of the data you mean to work with
   can be represented as Observables, rather than as a mixture of Observables and other types. This
@@ -53,7 +53,7 @@ id: from
 
   {% lang_operator RxGroovy decode from fromAction fromCallable fromFunc0 fromRunnable runAsync %}
     <figure class="variant">
-     <img src="images/from.Future.png" width="640" alt="from" />
+     <img src="images/from.Future.png" width="100%" alt="from" />
      <figcaption><p>
       In RxGroovy, the <code>from</code> operator can convert a Future, an Iterable, or an Array.
       In the case of an Iterable or an Array, the resulting Observable will emit each item contained
@@ -78,7 +78,7 @@ id: from
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromFunc0.png" width="640" alt="fromFunc0" />
+     <img src="images/fromFunc0.png" width="100%" alt="fromFunc0" />
      <figcaption><p>
       In addition, in the <code>RxJavaAsyncUtil</code> package, you have available to you the
       following operators that convert actions, callables, functions, and runnables into
@@ -97,7 +97,7 @@ id: from
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/St.from.png" width="640" alt="from" />
+     <img src="images/St.from.png" width="100%" alt="from" />
      <figcaption><p>
       Note that there is also a <code>from</code> operator that is a method of the optional
       <code>StringObservable</code> class. It converts a stream of characters or a
@@ -125,7 +125,7 @@ id: from
      retrieve the otherwise-missing items.
     </p>
     <figure>
-     <img src="images/St.decode.png" width="640" alt="decode" />
+     <img src="images/St.decode.png" width="100%" alt="decode" />
      <figcaption><p>
       The <code>StringObservable</code> class, which is not a default part of RxGroovy, also includes the
       <code>decode</code> operator which converts a stream of multibyte characters into an Observable that
@@ -136,7 +136,7 @@ id: from
 
   {% lang_operator RxJava decode from fromAction fromCallable fromFunc0 fromRunnable runAsync %}
     <figure class="variant">
-     <img src="images/from.Future.png" width="640" alt="from" />
+     <img src="images/from.Future.png" width="100%" alt="from" />
      <figcaption><p>
       In RxJava, the <code>from</code> operator can convert a Future, an Iterable, or an Array.
       In the case of an Iterable or an Array, the resulting Observable will emit each item contained
@@ -196,7 +196,7 @@ Sequence complete</pre></div>
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromFunc0.png" width="640" alt="fromFunc0" />
+     <img src="images/fromFunc0.png" width="100%" alt="fromFunc0" />
      <figcaption><p>
       In addition, in the <code>RxJavaAsyncUtil</code> package, you have available to you the
       following operators that convert actions, callables, functions, and runnables into
@@ -215,7 +215,7 @@ Sequence complete</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/St.from.png" width="640" alt="from" />
+     <img src="images/St.from.png" width="100%" alt="from" />
      <figcaption><p>
       Note that there is also a <code>from</code> operator that is a method of the optional
       <code>StringObservable</code> class. It converts a stream of characters or a
@@ -243,7 +243,7 @@ Sequence complete</pre></div>
      retrieve the otherwise-missing items.
     </p>
     <figure>
-     <img src="images/St.decode.png" width="640" alt="decode" />
+     <img src="images/St.decode.png" width="100%" alt="decode" />
      <figcaption><p>
       The <code>StringObservable</code> class, which is not a default part of RxGroovy, also includes the
       <code>decode</code> operator which converts a stream of multibyte characters into an Observable that
@@ -257,7 +257,7 @@ Sequence complete</pre></div>
      There are several, specialized <span class="operator">From</span> variants in RxJS:
     </p>
     <figure class="variant">
-     <img src="images/from.png" width="640" alt="from" />
+     <img src="images/from.png" width="100%" alt="from" />
      <figcaption><p>
       In RxJS, the <code>from</code> operator converts an array-like or iterable object into an
       Observable that emits the items in that array or iterable. A String, in this context, is
@@ -357,7 +357,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromCallback.png" width="640" alt="fromCallback" />
+     <img src="images/fromCallback.png" width="100%" alt="fromCallback" />
      <figcaption><p>
       The <code>fromCallback</code> operator takes a function as a parameter, calls this
       function, and emits the value returned from it as its single emission.
@@ -438,7 +438,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromEvent.png" width="640" alt="fromEvent" />
+     <img src="images/fromEvent.png" width="100%" alt="fromEvent" />
      <figcaption><p>
       The <code>fromEvent</code> operator takes an &ldquo;element&rdquo; and an event name as
       parameters, and it then listens for events of that name taking place on that element. It
@@ -527,7 +527,7 @@ input.trigger('click');</pre></div>
      <div class="output"><pre>
 Next: Clicked!</pre></div>
     <figure class="variant">
-     <img src="images/of.png" width="640" alt="of" />
+     <img src="images/of.png" width="100%" alt="of" />
      <figcaption><p>
       The <code>of</code> operator accepts a number of items as parameters, and returns an
       Observable that emits each of these parameters, in order, as its emitted sequence.
