--- a/documentation/operators/join.html
+++ b/documentation/operators/join.html
@@ -14,7 +14,7 @@ id: join
 <h3>combine items emitted by two Observables whenever an item from one Observable is emitted during a time window defined according to an item emitted by the other Observable</h3>
 
 <figure>
- <img src="images/join.c.png" width="640" alt="Join" />
+ <img src="images/join.c.png" width="100%" alt="Join" />
  <figcaption><p>
   The <code>Join</code> operator combines the items emitted by two Observables, and selects which items to
   combine based on duration-windows that you define on a per-item basis. You implement these windows as
@@ -26,7 +26,7 @@ id: join
 </figure>
 
 <figure>
- <img src="images/groupJoin.c.png" width="640" alt="GroupJoin" />
+ <img src="images/groupJoin.c.png" width="100%" alt="GroupJoin" />
  <figcaption><p>
   Most ReactiveX implementations that have a <code>Join</code> operator also have a <code>GroupJoin</code>
   operator that is similar, except that the function you define to combine items emitted by the two Observables
@@ -61,7 +61,7 @@ id: join
 
   {% lang_operator RxGroovy join groupJoin %}
     <figure class="variant">
-     <img src="images/join_.png" width="640" alt="join" />
+     <img src="images/join_.png" width="100%" alt="join" />
      <figcaption><p>
       The <code>join</code> operator takes four parameters:
      </p>
@@ -79,7 +79,7 @@ id: join
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/groupJoin.png" width="640" alt="join" />
+     <img src="images/groupJoin.png" width="100%" alt="join" />
      <figcaption><p>
       The <code>groupJoin</code> operator takes four parameters:
      </p>
@@ -98,7 +98,7 @@ id: join
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/St.join.png" width="640" alt="join" />
+     <img src="images/St.join.png" width="100%" alt="join" />
      <figcaption><p>
       Note that there is also a <code>join</code> operator in the optional <code>StringObservable</code> class.
       It converts an Observable that emits a sequence of strings into an Observable that emits a single string
@@ -109,7 +109,7 @@ id: join
 
   {% lang_operator RxJava join groupJoin %}
     <figure class="variant">
-     <img src="images/join_.png" width="640" alt="join" />
+     <img src="images/join_.png" width="100%" alt="join" />
      <figcaption><p>
       The <code>join</code> operator takes four parameters:
      </p>
@@ -127,7 +127,7 @@ id: join
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/groupJoin.png" width="640" alt="join" />
+     <img src="images/groupJoin.png" width="100%" alt="join" />
      <figcaption><p>
       The <code>groupJoin</code> operator takes four parameters:
      </p>
@@ -146,7 +146,7 @@ id: join
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/St.join.png" width="640" alt="join" />
+     <img src="images/St.join.png" width="100%" alt="join" />
      <figcaption><p>
       Note that there is also a <code>join</code> operator in the optional <code>StringObservable</code> class.
       It converts an Observable that emits a sequence of strings into an Observable that emits a single string
@@ -157,7 +157,7 @@ id: join
 
   {% lang_operator RxJS join groupJoin %}
     <figure class="variant">
-     <img src="images/join_.png" width="640" alt="join" />
+     <img src="images/join_.png" width="100%" alt="join" />
      <figcaption><p>
       The <code>join</code> operator takes four parameters:
      </p>
@@ -198,7 +198,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/groupJoin.png" width="640" alt="join" />
+     <img src="images/groupJoin.png" width="100%" alt="join" />
      <figcaption><p>
       The <code>groupJoin</code> operator takes four parameters:
      </p>
