--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -14,7 +14,7 @@ id: just
 <h3>create an Observable that emits a particular item</h3>
 
 <figure>
- <img src="images/just.c.png" width="640" alt="Just" />
+ <img src="images/just.c.png" width="100%" alt="Just" />
  <figcaption><p>
   The <span class="operator">Just</span> operator converts an item into an Observable that emits
   that item.
@@ -59,7 +59,7 @@ id: just
 
   {% lang_operator RxGroovy just %}
     <figure class="variant">
-     <img src="images/just.png" width="640" alt="just" />
+     <img src="images/just.png" width="100%" alt="just" />
      <figcaption><p>
       RxGroovy implements this operator as <code>just</code>. It accepts between one and nine
       items as parameters, and returns an Observable that emits these items in the same order as
@@ -83,7 +83,7 @@ def observableThatEmitsSeveralNumbers = Observable.just( 1, 2, 3, 4, 5 );</pre><
 
   {% lang_operator RxJava just %}
     <figure class="variant">
-     <img src="images/just.png" width="640" alt="just" />
+     <img src="images/just.png" width="100%" alt="just" />
      <figcaption><p>
       RxJava implements this operator as <code>just</code>. It accepts between one and nine items as
       parameters, and returns an Observable that emits these items in the same order as they are
@@ -123,7 +123,7 @@ Sequence complete.</pre></div>
 
   {% lang_operator RxJS just return %}
     <figure class="variant">
-     <img src="images/just.png" width="640" alt="just" />
+     <img src="images/just.png" width="100%" alt="just" />
      <figcaption><p>
       RxJS implements this operator as <code>return</code> and as <code>just</code> (two names for
       the same operator with the same behavior). It accepts a single item as a parameter and returns
