--- a/documentation/operators/min.html
+++ b/documentation/operators/min.html
@@ -14,7 +14,7 @@ id: min
    <h3>emits the item from the source Observable that had the minimum value</h3>
 
    <figure>
-    <img src="images/min.c.png" width="640" alt="Min" />
+    <img src="images/min.c.png" width="100%" alt="Min" />
     <figcaption><p>
      The <span class="operator">Min</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single item: the item with the smallest
@@ -49,7 +49,7 @@ id: min
       <code>rxjava-math</code> module.
      </p>
      <figure>
-      <img src="images/min.png" width="640" alt="min" />
+      <img src="images/min.png" width="100%" alt="min" />
       <figcaption><p>
        RxGroovy implements a <code>min</code> operator. It takes an optional comparator that it
        will use instead of its default to compare the value of two items. If more than one item
@@ -58,7 +58,7 @@ id: min
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/minBy.png" width="640" alt="minBy" />
+      <img src="images/minBy.png" width="100%" alt="minBy" />
       <figcaption><p>
        The <code>minBy</code> operator is similar to <code>min</code>, but instead of emitting the
        item with the minimum value, it emits the item with the minimum <em>key</em>, where that
@@ -73,7 +73,7 @@ id: min
       <code>rxjava-math</code> module.
      </p>
      <figure>
-      <img src="images/min.png" width="640" alt="min" />
+      <img src="images/min.png" width="100%" alt="min" />
       <figcaption><p>
        RxJava implements a <code>min</code> operator. It takes an optional comparator that it
        will use instead of its default to compare the value of two items. If more than one item
@@ -82,7 +82,7 @@ id: min
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/minBy.png" width="640" alt="minBy" />
+      <img src="images/minBy.png" width="100%" alt="minBy" />
       <figcaption><p>
        The <code>minBy</code> operator is similar to <code>min</code>, but instead of emitting the
        item with the minimum value, it emits the item with the minimum <em>key</em>, where that
@@ -93,7 +93,7 @@ id: min
 
   {% lang_operator RxJS min minBy %}
      <figure>
-      <img src="images/min.png" width="640" alt="min" />
+      <img src="images/min.png" width="100%" alt="min" />
       <figcaption><p>
        RxJS implements the <code>min</code> operator. It takes an optional comparer function that it
        will use instead of its default to compare the value of two items.</p>
@@ -110,7 +110,7 @@ Next: 1
 Completed</pre></div></figcaption>
      </figure>
      <figure>
-      <img src="images/minBy.png" width="640" alt="minBy" />
+      <img src="images/minBy.png" width="100%" alt="minBy" />
       <figcaption><p>
        The <code>minBy</code> operator is similar to <code>min</code>, but instead of emitting the
        item with the minimum value, it emits the item with the minimum <em>key</em>, where that
