--- a/documentation/operators/observeon.html
+++ b/documentation/operators/observeon.html
@@ -14,7 +14,7 @@ id: observeOn
 <h3>specify the Scheduler on which an observer will observe this Observable</h3>
 
 <figure>
- <img src="images/observeOn.c.png" width="640" alt="ObserveOn" />
+ <img src="images/observeOn.c.png" width="100%" alt="ObserveOn" />
  <figcaption><p>
   Many implementations of ReactiveX use <a href="../scheduler.html">&ldquo;<code>Scheduler</code>s&rdquo;</a>
   to govern an Observable&#8217;s transitions between threads in a multi-threaded environment. You can instruct
@@ -55,7 +55,7 @@ id: observeOn
 
   {% lang_operator RxGroovy observeOn %}
     <figure class="variant">
-     <img src="images/observeOn.png" width="640" alt="observeOn" />
+     <img src="images/observeOn.png" width="100%" alt="observeOn" />
      <figcaption><p>
       To specify on which Scheduler the Observable should invoke its observers&#8217; <code>onNext</code>,
       <code>onCompleted</code>, and <code>onError</code> methods, use the <code>observeOn</code> operator,
@@ -69,7 +69,7 @@ id: observeOn
 
   {% lang_operator RxJava observeOn %}
     <figure class="variant">
-     <img src="images/observeOn.png" width="640" alt="observeOn" />
+     <img src="images/observeOn.png" width="100%" alt="observeOn" />
      <figcaption><p>
       To specify on which Scheduler the Observable should invoke its observers&#8217; <code>onNext</code>,
       <code>onCompleted</code>, and <code>onError</code> methods, use the <code>observeOn</code> operator,
@@ -83,7 +83,7 @@ id: observeOn
 
   {% lang_operator RxJS observeOn %}
     <figure class="variant">
-     <img src="images/observeOn.png" width="640" alt="observeOn" />
+     <img src="images/observeOn.png" width="100%" alt="observeOn" />
      <figcaption><p>
       To specify on which Scheduler the Observable should invoke its observers&#8217; <code>onNext</code>,
       <code>onCompleted</code>, and <code>onError</code> methods, use the <code>observeOn</code> operator,
