--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -14,7 +14,7 @@ id: reduce
    <h3>apply a function to each item emitted by an Observable, sequentially, and emit the final value</h3>
 
    <figure>
-    <img src="images/reduce.c.png" width="640" alt="Reduce" />
+    <img src="images/reduce.c.png" width="100%" alt="Reduce" />
     <figcaption><p>
      The <span class="operator">Reduce</span> operator applies a function to the first item emitted by the
      source Observable and then feeds the result of the function back into the function along with the second
@@ -50,7 +50,7 @@ id: reduce
 
   {% lang_operator RxGroovy collect reduce %}
      <figure>
-      <img src="images/reduce.png" width="640" alt="reduce" />
+      <img src="images/reduce.png" width="100%" alt="reduce" />
       <figcaption><p>
        The <code>reduce</code> operator returns an Observable that applies a function of your choosing to the
        first item emitted by a source Observable, then feeds the result of that function along with the second
@@ -86,7 +86,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/reduceSeed.png" width="640" alt="reduce" />
+      <img src="images/reduceSeed.png" width="100%" alt="reduce" />
       <figcaption><p>
        There is also a version of <code>reduce</code> to which you can pass a seed item in addition to an
        accumulator function. Note that passing a <code>null</code> seed is not the same as not passing a seed.
@@ -106,7 +106,7 @@ Sequence complete</pre></div>
       Instead, use <code>collect</code> for that purpose.
      </p>
      <figure>
-      <img src="images/collect.png" width="640" alt="collect" />
+      <img src="images/collect.png" width="100%" alt="collect" />
       <figcaption><p>
        The <code>collect</code> operator is similar to <code>reduce</code> but is specialized for the purpose
        of collecting the whole set of items emitted by the source Observable into a single mutable data
@@ -128,7 +128,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava collect reduce %}
      <figure>
-      <img src="images/reduce.png" width="640" alt="reduce" />
+      <img src="images/reduce.png" width="100%" alt="reduce" />
       <figcaption><p>
        The <code>reduce</code> operator returns an Observable that applies a function of your choosing to the
        first item emitted by a source Observable, then feeds the result of that function along with the second
@@ -148,7 +148,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/reduceSeed.png" width="640" alt="reduce" />
+      <img src="images/reduceSeed.png" width="100%" alt="reduce" />
       <figcaption><p>
        There is also a version of <code>reduce</code> to which you can pass a seed item in addition to an
        accumulator function. Note that passing a <code>null</code> seed is not the same as not passing a seed.
@@ -168,7 +168,7 @@ Sequence complete</pre></div>
       Instead, use <code>collect</code> for that purpose.
      </p>
      <figure>
-      <img src="images/collect.png" width="640" alt="collect" />
+      <img src="images/collect.png" width="100%" alt="collect" />
       <figcaption><p>
        The <code>collect</code> operator is similar to <code>reduce</code> but is specialized for the purpose
        of collecting the whole set of items emitted by the source Observable into a single mutable data
@@ -190,7 +190,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS reduce %}
      <figure>
-      <img src="images/reduceSeed.png" width="640" alt="reduce" />
+      <img src="images/reduceSeed.png" width="100%" alt="reduce" />
       <figcaption><p>
        RxJS implements the <code>reduce</code> operator. Pass it an accumulator function, and, optionally, a
        seed value to pass into the accumulator function with the first item emitted by the source Observable.
