--- a/documentation/operators/skip.html
+++ b/documentation/operators/skip.html
@@ -14,7 +14,7 @@ id: skip
    <h3>suppress the first <i>n</i> items emitted by an Observable</h3>
 
    <figure>
-    <img src="images/skip.c.png" width="640" alt="Skip" />
+    <img src="images/skip.c.png" width="100%" alt="Skip" />
     <figcaption><p>
      You can ignore the first <i>n</i> items emitted by an Observable and attend only to those items that come
      after, by modifying the Observable with the <span class="operator">Skip</span> operator.
@@ -51,7 +51,7 @@ id: skip
 
   {% lang_operator RxGroovy skip %}
      <figure>
-      <img src="images/skip.png" width="640" alt="skip" />
+      <img src="images/skip.png" width="100%" alt="skip" />
       <figcaption><p>
        In RxGroovy, this operator is implemented as <code>skip</code>.
       </p>
@@ -80,7 +80,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/skip.t.png" width="640" alt="skip" />
+      <img src="images/skip.t.png" width="100%" alt="skip" />
       <figcaption><p>
        There is also a variant of <code>skip</code> that takes a temporal duration rather than a quantity of
        items. It drops those items that are emitted during that initial duration of the source
@@ -100,7 +100,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava skip %}
      <figure>
-      <img src="images/skip.png" width="640" alt="skip" />
+      <img src="images/skip.png" width="100%" alt="skip" />
       <figcaption><p>
        In RxJava, this operator is implemented as <code>skip</code>.
       </p><p>
@@ -112,7 +112,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/skip.t.png" width="640" alt="skip" />
+      <img src="images/skip.t.png" width="100%" alt="skip" />
       <figcaption><p>
        There is also a variant of <code>skip</code> that takes a temporal duration rather than a quantity of
        items. It drops those items that are emitted during that initial duration of the source
@@ -132,7 +132,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS skip skipUntilWithTime %}
      <figure>
-      <img src="images/skip.png" width="640" alt="skip" />
+      <img src="images/skip.png" width="100%" alt="skip" />
       <figcaption><p>
        RxJS implements the <code>skip</code> operator.
       </p>
@@ -163,7 +163,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/skipUntilWithTime.png" width="640" alt="skipUntilWithTime" />
+      <img src="images/skipUntilWithTime.png" width="100%" alt="skipUntilWithTime" />
       <figcaption><p>
        RxJS also implements a <code>skipUntilWithTime</code> operator that does not skip a particular quantity
        of items from the source Observable, but skips items based on chronology. You set this skip period by
