--- a/documentation/operators/skiplast.html
+++ b/documentation/operators/skiplast.html
@@ -14,7 +14,7 @@ id: skipLast
    <h3>suppress the final <i>n</i> items emitted by an Observable</h3>
 
    <figure>
-    <img src="images/skipLast.c.png" width="640" alt="SkipLast" />
+    <img src="images/skipLast.c.png" width="100%" alt="SkipLast" />
     <figcaption><p>
      You can ignore the final <i>n</i> items emitted by an Observable and attend only to those items that come
      before them, by modifying the Observable with the <span class="operator">SkipLast</span> operator.
@@ -51,7 +51,7 @@ id: skipLast
 
   {% lang_operator RxGroovy skipLast %}
      <figure>
-      <img src="images/skipLast.png" width="640" alt="skipLast" />
+      <img src="images/skipLast.png" width="100%" alt="skipLast" />
       <figcaption><p>
        You can ignore the final <i>n</i> items emitted by an Observable and attend only to those items that
        precede them, by modifying the Observable with the <code>skipLast(<i>n</i>)</code> operator. Note that
@@ -66,7 +66,7 @@ id: skipLast
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/skipLast.t.png" width="640" alt="skipLast" />
+      <img src="images/skipLast.t.png" width="100%" alt="skipLast" />
       <figcaption><p>
        There is also a variant of <code>skipLast</code> that takes a temporal duration rather than a quantity of
        items. It drops those items that are emitted during that final duration of the source
@@ -89,7 +89,7 @@ id: skipLast
 
   {% lang_operator RxJava skipLast %}
      <figure>
-      <img src="images/skipLast.png" width="640" alt="skipLast" />
+      <img src="images/skipLast.png" width="100%" alt="skipLast" />
       <figcaption><p>
        You can ignore the final <i>n</i> items emitted by an Observable and attend only to those items that
        precede them, by modifying the Observable with the <code>skipLast(<i>n</i>)</code> operator. Note that
@@ -104,7 +104,7 @@ id: skipLast
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/skipLast.t.png" width="640" alt="skipLast" />
+      <img src="images/skipLast.t.png" width="100%" alt="skipLast" />
       <figcaption><p>
        There is also a variant of <code>skipLast</code> that takes a temporal duration rather than a quantity of
        items. It drops those items that are emitted during that final duration of the source
@@ -127,7 +127,7 @@ id: skipLast
 
   {% lang_operator RxJS skipLast skipLastWithTime %}
      <figure>
-      <img src="images/skipLast.png" width="640" alt="skipLast" />
+      <img src="images/skipLast.png" width="100%" alt="skipLast" />
       <figcaption><p>
        You can ignore the final <i>n</i> items emitted by an Observable and attend only to those items that
        precede them, by modifying the Observable with the <code>skipLast(<i>n</i>)</code> operator. Note that
@@ -161,7 +161,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/skipLastWithTime.png" width="640" alt="skipLastWithTime" />
+      <img src="images/skipLastWithTime.png" width="100%" alt="skipLastWithTime" />
       <figcaption><p>
        The <code>skipLastWithTime</code> operator takes a temporal duration rather than a quantity of
        items. It drops those items that are emitted during that final duration of the source
