--- a/documentation/operators/start.html
+++ b/documentation/operators/start.html
@@ -14,7 +14,7 @@ id: start
 <h3>create an Observable that emits the return value of a function-like directive</h3>
 
 <figure>
- <img src="images/start.c.png" width="640" alt="Start" />
+ <img src="images/start.c.png" width="100%" alt="Start" />
  <figcaption><p>
   There are a number of ways that programming languages have for obtaining values as the result of
   calculations, with names like functions, futures, actions, callables, runnables, and so forth.
@@ -52,7 +52,7 @@ id: start
      optional <code>rxjava-async</code> module.
     </p>
     <figure class="variant">
-     <img src="images/start.png" width="640" alt="start" />
+     <img src="images/start.png" width="100%" alt="start" />
      <figcaption><p>
       The <code>rxjava-async</code> module includes the <code>start</code> operator, which accepts
       a function as its parameter, calls that function to retrieve a value, and then returns an
@@ -63,7 +63,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/toAsync.png" width="640" alt="toAsync" />
+     <img src="images/toAsync.png" width="100%" alt="toAsync" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>toAsync</code>,
       <code>asyncAction</code>, and <code>asyncFunc</code> operators. These accept a function or
@@ -79,7 +79,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/startFuture.png" width="640" alt="startFuture" />
+     <img src="images/startFuture.png" width="100%" alt="startFuture" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>startFuture</code> operator.
       You pass it a function that returns a <code>Future</code>. <code>startFuture</code> calls this
@@ -89,7 +89,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/deferFuture.png" width="640" alt="deferFuture" />
+     <img src="images/deferFuture.png" width="100%" alt="deferFuture" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>deferFuture</code> operator.
       You pass it a function that returns a <code>Future</code> that returns an Observable.
@@ -103,7 +103,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromAction.png" width="640" alt="fromAction" />
+     <img src="images/fromAction.png" width="100%" alt="fromAction" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>fromAction</code> operator.
       It accepts an <code>Action</code> as its parameter, and returns an Observable that emits the
@@ -111,7 +111,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromCallable.png" width="640" alt="fromCallable" />
+     <img src="images/fromCallable.png" width="100%" alt="fromCallable" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>fromCallable</code> operator.
       It accepts a <code>Callable</code> as its parameter, and returns an Observable that emits the
@@ -119,7 +119,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromRunnable.png" width="640" alt="fromRunnable" />
+     <img src="images/fromRunnable.png" width="100%" alt="fromRunnable" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>fromRunnable</code> operator.
       It accepts a <code>Runnable</code> as its parameter, and returns an Observable that emits the
@@ -127,7 +127,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/forEachFuture.png" width="640" alt="forEachFuture" />
+     <img src="images/forEachFuture.png" width="100%" alt="forEachFuture" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>forEachFuture</code> operator.
       It is not really a variant of the <span class="operator">Start</span> operator, but something
@@ -176,7 +176,7 @@ id: start
      optional <code>rxjava-async</code> module.
     </p>
     <figure class="variant">
-     <img src="images/start.png" width="640" alt="start" />
+     <img src="images/start.png" width="100%" alt="start" />
      <figcaption><p>
       The <code>rxjava-async</code> module includes the <code>start</code> operator, which accepts
       a function as its parameter, calls that function to retrieve a value, and then returns an
@@ -187,7 +187,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/toAsync.png" width="640" alt="toAsync" />
+     <img src="images/toAsync.png" width="100%" alt="toAsync" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>toAsync</code>,
       <code>asyncAction</code>, and <code>asyncFunc</code> operators. These accept a function or
@@ -203,7 +203,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/startFuture.png" width="640" alt="startFuture" />
+     <img src="images/startFuture.png" width="100%" alt="startFuture" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>startFuture</code> operator.
       You pass it a function that returns a <code>Future</code>. <code>startFuture</code> calls this
@@ -213,7 +213,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/deferFuture.png" width="640" alt="deferFuture" />
+     <img src="images/deferFuture.png" width="100%" alt="deferFuture" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>deferFuture</code> operator.
       You pass it a function that returns a <code>Future</code> that returns an Observable.
@@ -227,7 +227,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromAction.png" width="640" alt="fromAction" />
+     <img src="images/fromAction.png" width="100%" alt="fromAction" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>fromAction</code> operator.
       It accepts an <code>Action</code> as its parameter, and returns an Observable that emits the
@@ -235,7 +235,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromCallable.png" width="640" alt="fromCallable" />
+     <img src="images/fromCallable.png" width="100%" alt="fromCallable" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>fromCallable</code> operator.
       It accepts a <code>Callable</code> as its parameter, and returns an Observable that emits the
@@ -243,7 +243,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/fromRunnable.png" width="640" alt="fromRunnable" />
+     <img src="images/fromRunnable.png" width="100%" alt="fromRunnable" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>fromRunnable</code> operator.
       It accepts a <code>Runnable</code> as its parameter, and returns an Observable that emits the
@@ -251,7 +251,7 @@ id: start
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/forEachFuture.png" width="640" alt="forEachFuture" />
+     <img src="images/forEachFuture.png" width="100%" alt="forEachFuture" />
      <figcaption><p>
       The <code>rxjava-async</code> module also includes the <code>forEachFuture</code> operator.
       It is not really a variant of the <span class="operator">Start</span> operator, but something
@@ -296,7 +296,7 @@ id: start
 
   {% lang_operator RxJS start startAsync toAsync %}
     <figure class="variant">
-     <img src="images/start.png" width="640" alt="start" />
+     <img src="images/start.png" width="100%" alt="start" />
      <figcaption><p>
       RxJS implements the <code>start</code> operator. It takes as its parameters a function whose
       return value will be the emission from the resulting Observable, and, optionally, any
@@ -340,7 +340,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/startAsync.png" width="640" alt="start" />
+     <img src="images/startAsync.png" width="100%" alt="start" />
      <figcaption><p>
       RxJS also implements the <code>startAsync</code> operator. It takes as its parameters an
       asynchronous function whose return value will be the emission from the resulting Observable.
