--- a/documentation/operators/takelast.html
+++ b/documentation/operators/takelast.html
@@ -14,7 +14,7 @@ id: takeLast
    <h3>emit only the final <i>n</i> items emitted by an Observable</h3>
 
    <figure>
-    <img src="images/takeLast.c.png" width="640" alt="TakeLast" />
+    <img src="images/takeLast.c.png" width="100%" alt="TakeLast" />
     <figcaption><p>
      You can emit only the final <i>n</i> items emitted by an Observable and ignore those items that come
      before them, by modifying the Observable with the <span class="operator">TakeLast</span> operator.
@@ -51,7 +51,7 @@ id: takeLast
 
   {% lang_operator RxGroovy takeLast takeLastBuffer %}
      <figure>
-      <img src="images/takeLast.n.png" width="640" alt="takeLast" />
+      <img src="images/takeLast.n.png" width="100%" alt="takeLast" />
       <figcaption><p>
        You can emit only the final <i>n</i> items emitted by an Observable and ignore those items that precede
        them, by modifying the Observable with the <code>takeLast(<i>n</i>)</code> operator. Note that this will
@@ -79,7 +79,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/takeLast.t.png" width="640" alt="takeLast" />
+      <img src="images/takeLast.t.png" width="100%" alt="takeLast" />
       <figcaption><p>
        There is also a variant of <code>takeLast</code> that takes a temporal duration rather than a quantity of
        items. It emits only those items that are emitted during that final duration of the source
@@ -99,7 +99,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/takeLast.tn.png" width="640" alt="takeLast" />
+      <img src="images/takeLast.tn.png" width="100%" alt="takeLast" />
       <figcaption><p>
        There is also a variant that combines the two methods. It emits the minimum of the number of items
        emitted during a specified time window <em>or</em> a particular count of items.
@@ -114,7 +114,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/takeLastBuffer.png" width="640" alt="takeLastBuffer" />
+      <img src="images/takeLastBuffer.png" width="100%" alt="takeLastBuffer" />
       <figcaption><p>
        There is also an operator called <code>takeLastBuffer</code>. It exists in the same set of variants
        as described above for <code>takeLast</code>, and only differs in behavior by emitting its items not
@@ -132,7 +132,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava takeLast takeLastBuffer %}
      <figure>
-      <img src="images/takeLast.n.png" width="640" alt="takeLast" />
+      <img src="images/takeLast.n.png" width="100%" alt="takeLast" />
       <figcaption><p>
        You can emit only the final <i>n</i> items emitted by an Observable and ignore those items that precede
        them, by modifying the Observable with the <code>takeLast(<i>n</i>)</code> operator. Note that this will
@@ -146,7 +146,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/takeLast.t.png" width="640" alt="takeLast" />
+      <img src="images/takeLast.t.png" width="100%" alt="takeLast" />
       <figcaption><p>
        There is also a variant of <code>takeLast</code> that takes a temporal duration rather than a quantity of
        items. It emits only those items that are emitted during that final duration of the source
@@ -166,7 +166,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/takeLast.tn.png" width="640" alt="takeLast" />
+      <img src="images/takeLast.tn.png" width="100%" alt="takeLast" />
       <figcaption><p>
        There is also a variant that combines the two methods. It emits the minimum of the number of items
        emitted during a specified time window <em>or</em> a particular count of items.
@@ -181,7 +181,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/takeLastBuffer.png" width="640" alt="takeLastBuffer" />
+      <img src="images/takeLastBuffer.png" width="100%" alt="takeLastBuffer" />
       <figcaption><p>
        There is also an operator called <code>takeLastBuffer</code>. It exists in the same set of variants
        as described above for <code>takeLast</code>, and only differs in behavior by emitting its items not
@@ -199,7 +199,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS takeLast takeLastBuffer takeLastBufferWithTime takeLastWithTime %}
      <figure>
-      <img src="images/takeLast.n.png" width="640" alt="takeLast" />
+      <img src="images/takeLast.n.png" width="100%" alt="takeLast" />
       <figcaption><p>
        You can emit only the final <i>n</i> items emitted by an Observable and ignore those items that precede
        them, by modifying the Observable with the <code>takeLast(<i>n</i>)</code> operator. Note that this will
@@ -233,7 +233,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/takeLastWithTime.png" width="640" alt="takeLastWithTime" />
+      <img src="images/takeLastWithTime.png" width="100%" alt="takeLastWithTime" />
       <figcaption><p>
        The <code>takeLastWithTime</code> operator takes a temporal duration rather than a quantity of items. It
        emits only those items that are emitted during that final duration of the source Observable&#8217;s
@@ -278,7 +278,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/takeLastBuffer.png" width="640" alt="takeLastBuffer" />
+      <img src="images/takeLastBuffer.png" width="100%" alt="takeLastBuffer" />
       <figcaption><p>
        There is also an operator called <code>takeLastBuffer</code>. It differs in behavior from
        <code>takeLast</code> by emitting its items not individually but collected into a single array of items
@@ -309,7 +309,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/takeLastBufferWithTime.png" width="640" alt="takeLastBufferWithTime" />
+      <img src="images/takeLastBufferWithTime.png" width="100%" alt="takeLastBufferWithTime" />
       <figcaption><p>
        <code>takeLastBuffer</code> also has its duration-based variant, <code>takeLastBufferWithTime</code>,
        which is similar to <code>takeLastWithTime</code> except that it emits its items not individually but
