--- a/documentation/operators/takewhile.html
+++ b/documentation/operators/takewhile.html
@@ -14,7 +14,7 @@ id: takeWhile
    <h3>mirror items emitted by an Observable until a specified condition becomes false</h3>
 
    <figure>
-    <img src="images/takeWhile.c.png" width="640" alt="TakeWhile" />
+    <img src="images/takeWhile.c.png" width="100%" alt="TakeWhile" />
     <figcaption><p>
      The <span class="operator">TakeWhile</span> mirrors the source Observable until such time as some condition
      you specify becomes false, at which point <span class="operator">TakeWhile</span> stops mirroring the
@@ -51,7 +51,7 @@ id: takeWhile
 
   {% lang_operator RxGroovy takeWhile %}
      <figure>
-      <img src="images/takeWhile.png" width="640" alt="takeWhile" />
+      <img src="images/takeWhile.png" width="100%" alt="takeWhile" />
       <figcaption><p>
        The <code>takeWhile</code> operator returns an Observable that mirrors the behavior of the source
        Observable until such time as a function, applied to an item emitted by that Observable, returns
@@ -86,7 +86,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava takeWhile %}
      <figure>
-      <img src="images/takeWhile.png" width="640" alt="takeWhile" />
+      <img src="images/takeWhile.png" width="100%" alt="takeWhile" />
       <figcaption><p>
        The <code>takeWhile</code> operator returns an Observable that mirrors the behavior of the source
        Observable until such time as a function, applied to an item emitted by that Observable, returns
@@ -104,7 +104,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS takeWhile %}
      <figure>
-      <img src="images/takeWhile.png" width="640" alt="takeWhile" />
+      <img src="images/takeWhile.png" width="100%" alt="takeWhile" />
       <figcaption><p>
        RxJS implements the <code>takeWhile</code> operator. You pass it a function that governs the takeping
        process. <code>takeWhile</code> calls that function for each item emitted by the source Observable
