--- a/documentation/operators/template.html
+++ b/documentation/operators/template.html
@@ -14,7 +14,7 @@ id: oPERATOR
 <h3>SHORT_DESCRIPTION</h3>
 
 <figure>
- <img src="images/OPERATOR.c.png" width="640" alt="OPERATOR" />
+ <img src="images/OPERATOR.c.png" width="100%" alt="OPERATOR" />
  <figcaption><p>
   LONG_DESCRIPTION
  </p></figcaption>
@@ -43,7 +43,7 @@ id: oPERATOR
 
   {% lang_operator RxGroovy %}
     <figure class="variant">
-     <img src="images/oPERATOR.png" width="640" alt="oPERATOR" />
+     <img src="images/oPERATOR.png" width="100%" alt="oPERATOR" />
      <figcaption><p>
      </p>
      <ul>
@@ -54,7 +54,7 @@ id: oPERATOR
 
   {% lang_operator RxJava %}
     <figure class="variant">
-     <img src="images/oPERATOR.png" width="640" alt="oPERATOR" />
+     <img src="images/oPERATOR.png" width="100%" alt="oPERATOR" />
      <figcaption><p>
      </p>
      <ul>
@@ -65,7 +65,7 @@ id: oPERATOR
 
   {% lang_operator RxJS %}
     <figure class="variant">
-     <img src="images/oPERATOR.png" width="640" alt="oPERATOR" />
+     <img src="images/oPERATOR.png" width="100%" alt="oPERATOR" />
      <figcaption><p>
      </p></figcaption>
     </figure>
