--- a/documentation/operators/using.html
+++ b/documentation/operators/using.html
@@ -13,7 +13,7 @@ id: using
    <h1>Using</h1>
    <h3>create a disposable resource that has the same lifespan as the Observable</h3>
    <figure>
-    <img src="images/using.c.png" width="640" alt="Using" />
+    <img src="images/using.c.png" width="100%" alt="Using" />
     <figcaption><p>
      The <span class="operator">Using</span> operator is a way you can instruct an Observable to create a
      resource that exists only during the lifespan of the Observable and is disposed of when the Observable
@@ -43,7 +43,7 @@ id: using
 
   {% lang_operator RxGroovy using %}
      <figure>
-      <img src="images/using.png" width="640" alt="using" />
+      <img src="images/using.png" width="100%" alt="using" />
       <figcaption><p>
        You pass the <code>using</code> operator three parameters:
       </p><ol>
@@ -68,7 +68,7 @@ id: using
 
   {% lang_operator RxJava using %}
      <figure>
-      <img src="images/using.png" width="640" alt="using" />
+      <img src="images/using.png" width="100%" alt="using" />
       <figcaption><p>
        You pass the <code>using</code> operator three parameters:
       </p><ol>
@@ -93,7 +93,7 @@ id: using
 
   {% lang_operator RxJS using %}
      <figure>
-      <img src="images/using.js.png" width="640" alt="using" />
+      <img src="images/using.js.png" width="100%" alt="using" />
       <figcaption><p>
        You pass the <code>using</code> operator two parameters:
       </p><ol>
