--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -13,7 +13,7 @@ id: zip
    <h1>Zip</h1>
    <h3>combine the emissions of multiple Observables together via a specified function and emit single items for each combination based on the results of this function</h3>
    <figure>
-    <img src="images/zip.c.png" width="640" alt="Zip" />
+    <img src="images/zip.c.png" width="100%" alt="Zip" />
     <figcaption><p>
      The <code>Zip</code> method returns an Observable that applies a function of your choosing to
      the combination of items emitted, in sequence, by two (or more) other Observables, with the
@@ -55,7 +55,7 @@ id: zip
       <code>zipWith</code>, an instance function version of the operator.
      </p>
      <figure>
-      <img src="images/zip.o.png" width="640" alt="zip" />
+      <img src="images/zip.o.png" width="100%" alt="zip" />
       <figcaption><p>
        The last argument to <code>zip</code> is a function that accepts an item from each of the
        Observables being zipped and emits an item to be emitted in response by the Observable
@@ -91,7 +91,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/zip.i.png" width="640" alt="zipWith" />
+      <img src="images/zip.i.png" width="100%" alt="zipWith" />
       <figcaption><p>
        The <code>zipWith</code> instance version of this operator always takes two parameters.
        The first parameter may be either a simple Observable, or an iterable (as in the illustration
@@ -114,7 +114,7 @@ Sequence complete</pre></div>
       <code>zipWith</code>, an instance function version of the operator.
      </p>
      <figure>
-      <img src="images/zip.o.png" width="640" alt="zip" />
+      <img src="images/zip.o.png" width="100%" alt="zip" />
       <figcaption><p>
        The last argument to <code>zip</code> is a function that accepts an item from each of the
        Observables being zipped and emits an item to be emitted in response by the Observable
@@ -130,7 +130,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/zip.i.png" width="640" alt="zipWith" />
+      <img src="images/zip.i.png" width="100%" alt="zipWith" />
       <figcaption><p>
        The <code>zipWith</code> instance version of this operator always takes two parameters.
        The first parameter may be either a simple Observable, or an iterable (as in the illustration
@@ -152,7 +152,7 @@ Sequence complete</pre></div>
       RxJS implements this operator as <code>zip</code> and <code>zipArray</code>.
      </p>
      <figure>
-      <img src="images/zip.png" width="640" alt="zip" />
+      <img src="images/zip.png" width="100%" alt="zip" />
       <figcaption><p>
        <code>zip</code> accepts a variable number of Observables or Promises as parameters, followed
        by a function that accepts one item emitted by each of those Observables or resolved by those
@@ -216,7 +216,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/zipArray.png" width="640" alt="zipArray" />
+      <img src="images/zipArray.png" width="100%" alt="zipArray" />
       <figcaption><p>
        <code>zipArray</code> accepts a variable number of Observables as parameters and returns an
        Observable that emits arrays, each one containing the <i>n</i><sup>th</sup> item from each
@@ -250,7 +250,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/forkJoin.png" width="640" alt="forkJoin" />
+      <img src="images/forkJoin.png" width="100%" alt="forkJoin" />
       <figcaption><p>
        RxJS also implements a similar operator, <code>forkJoin</code>. There are two varities of this
        operator. The first collects the last element emitted by each of the source Observables into an array and
@@ -275,7 +275,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/forkJoin.p.png" width="640" alt="forkJoin" />
+      <img src="images/forkJoin.p.png" width="100%" alt="forkJoin" />
       <figcaption><p>
       <p>
        A second variant of <code>forkJoin</code> exists as a prototype function, and you call it on an instance
