--- a/documentation/operators/amb.html
+++ b/documentation/operators/amb.html
@@ -13,7 +13,7 @@ id: amb
    <h1>Amb</h1>
    <h3>given two or more source Observables, emit all of the items from only the first of these Observables to emit an item</h3>
    <figure>
-    <img src="images/amb.C.png" width="640" alt="Amb" />
+    <img src="images/amb.C.png" width="100%" alt="Amb" />
    <figcaption><p>
     When you pass a number of source Observables to <span class="operator">Amb</span>, it will pass
     through the emissions and notifications of exactly one of these Observables: the first one that
@@ -39,7 +39,7 @@ id: amb
 
   {% lang_operator RxGroovy amb ambWith %}
      <figure>
-      <img src="images/amb.png" width="640" alt="amb" />
+      <img src="images/amb.png" width="100%" alt="amb" />
       <figcaption><p>
        RxGroovy implements this operator as <code>amb</code>. It takes up to nine Observables
        as individual parameters, or a single Iterable of Observables. There is also an instance
@@ -58,7 +58,7 @@ id: amb
 
   {% lang_operator RxJava amb ambWith %}
      <figure>
-      <img src="images/amb.png" width="640" alt="amb" />
+      <img src="images/amb.png" width="100%" alt="amb" />
       <figcaption><p>
        RxJava implements this operator as <code>amb</code>. It takes up to nine Observables as
        individual parameters, or a single Iterable of Observables. There is also an instance
@@ -77,7 +77,7 @@ id: amb
 
   {% lang_operator RxJS amb %}
      <figure>
-      <img src="images/amb.png" width="640" alt="amb" />
+      <img src="images/amb.png" width="100%" alt="amb" />
       <figcaption><p>
        RxJS implements this operator as <code>amb</code>. It takes a variable number of parameters,
        which may be either Observables or Promises (or combinations of the two).
