--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -14,7 +14,7 @@ id: create
 <h3>create an Observable from scratch by means of a function</h3>
 
 <figure>
- <img src="images/create.c.png" width="640" alt="Create" />
+ <img src="images/create.c.png" width="100%" alt="Create" />
  <figcaption><p>
   You can create an Observable from scratch by using the <span class="operator">Create</span>
   operator. You pass this operator a function that accepts the observer as its parameter. Write this
@@ -51,7 +51,7 @@ id: create
 
   {% lang_operator RxGroovy create %}
     <figure class="variant">
-     <img src="images/create.png" width="640" alt="create" />
+     <img src="images/create.png" width="100%" alt="create" />
      <figcaption><p>
       RxGroovy implements this operator as <code>create</code>.
      </p>
@@ -90,7 +90,7 @@ def myObservable = Observable.create({ aSubscriber ->
 
   {% lang_operator RxJava create %}
     <figure class="variant">
-     <img src="images/create.png" width="640" alt="create" />
+     <img src="images/create.png" width="100%" alt="create" />
      <figcaption><p>
       RxJava implements this operator as <code>create</code>.
      </p><p>
@@ -148,7 +148,7 @@ Sequence complete.</pre></div>
 
   {% lang_operator RxJS create createWithDisposable generate generateWithAbsoluteTime generateWithRelativeTime %}
     <figure class="variant">
-     <img src="images/create.png" width="640" alt="create" />
+     <img src="images/create.png" width="100%" alt="create" />
      <figcaption><p>
       RxJS implements this operator as <code>create</code> (there is also an alternate name for the
       same operator: <code>createWithDisposable</code>).
@@ -202,7 +202,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/generate.png" width="640" alt="generate" />
+     <img src="images/generate.png" width="100%" alt="generate" />
      <figcaption><p>
       You can use the <code>generate</code> operator to create simple Observables that can generate their
       next emissions, and can determine when to terminate, based on the value of the previous emission. The
@@ -248,7 +248,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/generateWithRelativeTime.png" width="640" alt="generateWithRelativeTime" />
+     <img src="images/generateWithRelativeTime.png" width="100%" alt="generateWithRelativeTime" />
      <figcaption><p>
       You can use the <code>generateWithRelativeTime</code> operator to create simple Observables that can
       generate their next emissions, and can determine when to terminate, based on the value of the previous
@@ -296,7 +296,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/generateWithAbsoluteTime.png" width="640" alt="generateWithAbsoluteTime" />
+     <img src="images/generateWithAbsoluteTime.png" width="100%" alt="generateWithAbsoluteTime" />
      <figcaption><p>
       You can use the <code>generateWithAbsoluteTime</code> operator to create simple Observables that can
       generate their next emissions, and can determine when to terminate, based on the value of the previous
