--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -13,7 +13,7 @@ id: delay
    <h1>Delay</h1>
    <h3>shift the emissions from an Observable forward in time by a particular amount</h3>
    <figure>
-    <img src="images/delay.c.png" width="640" alt="Delay" />
+    <img src="images/delay.c.png" width="100%" alt="Delay" />
     <figcaption><p>
      The <span class="operator">Delay</span> operator modifies its source Observable by pausing for a particular
      increment of time (that you specify) before emitting each of the source Observable&#8217;s items. This has
@@ -47,7 +47,7 @@ id: delay
       RxGroovy implements this operator as variants of <code>delay</code> and <code>delaySubscription</code>.
      </p>
      <figure>
-      <img src="images/delay.png" width="640" alt="delay" />
+      <img src="images/delay.png" width="100%" alt="delay" />
       <figcaption><p>
        The first variant of <code>delay</code> accepts parameters that define a duration of time (a quantity of
        time, and a <code>TimeUnit</code> that this quantity is denominated in). Each time the source Observable
@@ -68,7 +68,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delay.o.png" width="640" alt="delay" />
+      <img src="images/delay.o.png" width="100%" alt="delay" />
       <figcaption><p>
        Another variant of <code>delay</code> does not use a constant delay duration, but sets its delay
        duration on a per-item basis by passing each item from the source Observable into a function that returns
@@ -83,7 +83,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delay.oo.png" width="640" alt="delay" />
+      <img src="images/delay.oo.png" width="100%" alt="delay" />
       <figcaption><p>
        The variant of <code>delay</code> that uses a per-item Observable to set the delay has a variant
        that allows you to pass in a function that returns an Observable that acts as a delay timer for the
@@ -98,7 +98,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delaySubscription.png" width="640" alt="delaySubscription" />
+      <img src="images/delaySubscription.png" width="100%" alt="delaySubscription" />
       <figcaption><p>
        There is also an operator with which you can delay the subscription to the source Observable:
        <code>delaySubscription</code>. It accepts parameters that define the amount of time to delay (a quantity
@@ -114,7 +114,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delaySubscription.o.png" width="640" alt="delaySubscription" />
+      <img src="images/delaySubscription.o.png" width="100%" alt="delaySubscription" />
       <figcaption><p>
        And there is a variant of <code>delaySubscription</code> that uses an Observable (returned by a function
        you supply) rather than a fixed duration in order to set the subscription delay.
@@ -133,7 +133,7 @@ id: delay
       RxJava implements this operator as variants of <code>delay</code> and <code>delaySubscription</code>.
      </p>
      <figure>
-      <img src="images/delay.png" width="640" alt="delay" />
+      <img src="images/delay.png" width="100%" alt="delay" />
       <figcaption><p>
        The first variant of <code>delay</code> accepts parameters that define a duration of time (a quantity of
        time, and a <code>TimeUnit</code> that this quantity is denominated in). Each time the source Observable
@@ -154,7 +154,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delay.o.png" width="640" alt="delay" />
+      <img src="images/delay.o.png" width="100%" alt="delay" />
       <figcaption><p>
        Another variant of <code>delay</code> does not use a constant delay duration, but sets its delay
        duration on a per-item basis by passing each item from the source Observable into a function that returns
@@ -169,7 +169,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delay.oo.png" width="640" alt="delay" />
+      <img src="images/delay.oo.png" width="100%" alt="delay" />
       <figcaption><p>
        The variant of <code>delay</code> that uses a per-item Observable to set the delay has a variant
        that allows you to pass in a function that returns an Observable that acts as a delay timer for the
@@ -184,7 +184,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delaySubscription.png" width="640" alt="delaySubscription" />
+      <img src="images/delaySubscription.png" width="100%" alt="delaySubscription" />
       <figcaption><p>
        There is also an operator with which you can delay the subscription to the source Observable:
        <code>delaySubscription</code>. It accepts parameters that define the amount of time to delay (a quantity
@@ -200,7 +200,7 @@ id: delay
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/delaySubscription.o.png" width="640" alt="delaySubscription" />
+      <img src="images/delaySubscription.o.png" width="100%" alt="delaySubscription" />
       <figcaption><p>
        And there is a variant of <code>delaySubscription</code> that uses an Observable (returned by a function
        you supply) rather than a fixed duration in order to set the subscription delay.
@@ -216,7 +216,7 @@ id: delay
 
   {% lang_operator RxJS delay delayWithSelector %}
      <figure>
-      <img src="images/delay.png" width="640" alt="delay" />
+      <img src="images/delay.png" width="100%" alt="delay" />
       <figcaption><p>
        In RxJS you can set the per-item delay in two ways: by passing a number of milliseconds into the
        <code>delay</code> operator (which will delay each emission by that amount of time), or by passing in
@@ -255,7 +255,7 @@ Next: 2
 Completed</pre></div>
      </figure>
      <figure>
-      <img src="images/delayWithSelector.png" width="640" alt="delayWithSelector" />
+      <img src="images/delayWithSelector.png" width="100%" alt="delayWithSelector" />
       <figcaption><p>
        <code>delayWithSelector</code> is like <code>delay</code> but does not use a constant delay duration (or
        absolute time), but sets its delay duration on a per-item basis by passing each item from the source
@@ -284,7 +284,7 @@ Next: 2:400
 Completed</pre></div>
      </figure>
      <figure>
-      <img src="images/delayWithSelector.o.png" width="640" alt="delayWithSelector" />
+      <img src="images/delayWithSelector.o.png" width="100%" alt="delayWithSelector" />
       <figcaption><p>
        There is also a version of <code>delayWithSelector</code> that takes an additional (first) argument:
        an Observable that sets a delay before <code>delayWithSelector</code> subscribes to the source
