--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -13,7 +13,7 @@ id: distinct
    <h1>Distinct</h1>
    <h3>suppress duplicate items emitted by an Observable</h3>
    <figure>
-    <img src="images/distinct.c.png" width="640" alt="Distinct" />
+    <img src="images/distinct.c.png" width="100%" alt="Distinct" />
     <figcaption><p>
      The <span class="operator">Distinct</span> operator filters an Observable by only allowing items through
      that have not already been emitted.
@@ -48,7 +48,7 @@ id: distinct
 
   {% lang_operator RxGroovy distinct distinctUntilChanged %}
      <figure>
-      <img src="images/distinct.png" width="640" alt="distinct" />
+      <img src="images/distinct.png" width="100%" alt="distinct" />
       <figcaption><p>
        RxGroovy implements this operator as <code>distinct</code>.
       </p>
@@ -57,7 +57,7 @@ id: distinct
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/distinct.key.png" width="640" alt="distinct" />
+      <img src="images/distinct.key.png" width="100%" alt="distinct" />
       <figcaption><p>
        There is also a variant of this operator that takes a function as a parameter. This function
        operates on items emitted by the source Observable to generate a &ldquo;key.&rdquo; It is
@@ -69,7 +69,7 @@ id: distinct
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/distinctUntilChanged.png" width="640" alt="distinctUntilChanged" />
+      <img src="images/distinctUntilChanged.png" width="100%" alt="distinctUntilChanged" />
       <figcaption><p>
        RxGroovy also implements the <code>distinctUntilChanged</code> operator. It only compares
        emitted items from the source Observable against their immediate predecessors in order to
@@ -80,7 +80,7 @@ id: distinct
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/distinctUntilChanged.key.png" width="640" alt="distinctUntilChanged" />
+      <img src="images/distinctUntilChanged.key.png" width="100%" alt="distinctUntilChanged" />
       <figcaption><p>
        As with <code>distinct</code>, there is also a version of <code>distinctUntilChanged</code>
        that accepts a key selector function and that uses the resulting key to determine whether or
@@ -98,7 +98,7 @@ id: distinct
 
   {% lang_operator RxJava distinct distinctUntilChanged %}
      <figure>
-      <img src="images/distinct.png" width="640" alt="distinct" />
+      <img src="images/distinct.png" width="100%" alt="distinct" />
       <figcaption><p>
        RxJava implements this operator as <code>distinct</code>.
       </p>
@@ -132,7 +132,7 @@ Sequence complete.</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/distinct.key.png" width="640" alt="distinct" />
+      <img src="images/distinct.key.png" width="100%" alt="distinct" />
       <figcaption><p>
        There is also a variant of this operator that takes a function as a parameter. This function
        operates on items emitted by the source Observable to generate a &ldquo;key.&rdquo; It is
@@ -144,7 +144,7 @@ Sequence complete.</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/distinctUntilChanged.png" width="640" alt="distinctUntilChanged" />
+      <img src="images/distinctUntilChanged.png" width="100%" alt="distinctUntilChanged" />
       <figcaption><p>
        RxJava also implements the <code>distinctUntilChanged</code> operator. It only compares
        emitted items from the source Observable against their immediate predecessors in order to
@@ -155,7 +155,7 @@ Sequence complete.</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/distinctUntilChanged.key.png" width="640" alt="distinctUntilChanged" />
+      <img src="images/distinctUntilChanged.key.png" width="100%" alt="distinctUntilChanged" />
       <figcaption><p>
        As with <code>distinct</code>, there is also a version of <code>distinctUntilChanged</code>
        that accepts a key selector function and that uses the resulting key to determine whether or
@@ -173,7 +173,7 @@ Sequence complete.</pre></div>
 
   {% lang_operator RxJS distinct distinctUntilChanged %}
      <figure>
-      <img src="images/distinct.png" width="640" alt="distinct" />
+      <img src="images/distinct.png" width="100%" alt="distinct" />
       <figcaption><p>
        In RxJS, the <code>distinct</code> operator has two optional parameters:
       </p>
@@ -220,7 +220,7 @@ Next: { value: 24 }
 Completed</pre></div></figcaption>
      </figure>
      <figure>
-      <img src="images/distinctUntilChanged.png" width="640" alt="distinctUntilChanged" />
+      <img src="images/distinctUntilChanged.png" width="100%" alt="distinctUntilChanged" />
       <figcaption><p>
        RxJS also has a <code>distinctUntilChanged</code> operator. It only compares emitted items
        from the source Observable against their immediate predecessors in order to determine whether
