--- a/documentation/operators/groupby.html
+++ b/documentation/operators/groupby.html
@@ -14,7 +14,7 @@ id: groupBy
 <h3>divide an Observable into a set of Observables that each emit a different subset of items from the original Observable</h3>
 
 <figure>
- <img src="images/groupBy.c.png" width="640" alt="GroupBy" />
+ <img src="images/groupBy.c.png" width="100%" alt="GroupBy" />
  <figcaption><p>
   The <span class="operator">GroupBy</span> operator divides an Observable that emits items into
   an Observable that emits Observables, each one of which emits some subset of the items from the
@@ -48,7 +48,7 @@ id: groupBy
 
   {% lang_operator RxGroovy groupBy %}
     <figure class="variant">
-     <img src="images/groupBy.png" width="640" alt="groupBy" />
+     <img src="images/groupBy.png" width="100%" alt="groupBy" />
      <figcaption><p>
       RxGroovy implements the <code>groupBy</code> operator. The Observable it returns emits items
       of a particular subclass of Observable &mdash; the <code>GroupedObservable</code>. Objects that
@@ -105,7 +105,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava groupBy %}
     <figure class="variant">
-     <img src="images/groupBy.png" width="640" alt="groupBy" />
+     <img src="images/groupBy.png" width="100%" alt="groupBy" />
      <figcaption><p>
       RxJava implements the <code>groupBy</code> operator. The Observable it returns emits items
       of a particular subclass of Observable &mdash; the <code>GroupedObservable</code>. Objects
@@ -144,7 +144,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS groupBy groupByUntil %}
     <figure class="variant">
-     <img src="images/groupBy.png" width="640" alt="groupBy" />
+     <img src="images/groupBy.png" width="100%" alt="groupBy" />
      <figcaption><p>
       RxJS implements <code>groupBy</code>. It takes one to three parameters:
      </p>
@@ -202,7 +202,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/groupByUntil.png" width="640" alt="groupByUntil" />
+     <img src="images/groupByUntil.png" width="100%" alt="groupByUntil" />
      <figcaption><p>
       RxJS also implements <code>groupByUntil</code>. It monitors an additional Observable, and
       whenever that Observable emits an item, it closes any of the keyed Observables it has opened
