--- a/documentation/operators/max.html
+++ b/documentation/operators/max.html
@@ -14,7 +14,7 @@ id: max
    <h3>emits the item from the source Observable that had the maximum value</h3>
 
    <figure>
-    <img src="images/max.c.png" width="640" alt="Max" />
+    <img src="images/max.c.png" width="100%" alt="Max" />
     <figcaption><p>
      The <span class="operator">Max</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single item: the item with the largest
@@ -49,7 +49,7 @@ id: max
       <code>rxjava-math</code> module.
      </p>
      <figure>
-      <img src="images/max.png" width="640" alt="max" />
+      <img src="images/max.png" width="100%" alt="max" />
       <figcaption><p>
        RxGroovy implements a <code>max</code> operator. It takes an optional comparator that it
        will use instead of its default to compare the value of two items. If more than one item
@@ -58,7 +58,7 @@ id: max
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/maxBy.png" width="640" alt="maxBy" />
+      <img src="images/maxBy.png" width="100%" alt="maxBy" />
       <figcaption><p>
        The <code>maxBy</code> operator is similar to <code>max</code>, but instead of emitting the
        item with the maximum value, it emits the item with the maximum <em>key</em>, where that
@@ -73,7 +73,7 @@ id: max
       <code>rxjava-math</code> module.
      </p>
      <figure>
-      <img src="images/max.png" width="640" alt="max" />
+      <img src="images/max.png" width="100%" alt="max" />
       <figcaption><p>
        RxJava implements a <code>max</code> operator. It takes an optional comparator that it
        will use instead of its default to compare the value of two items. If more than one item
@@ -82,7 +82,7 @@ id: max
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/maxBy.png" width="640" alt="maxBy" />
+      <img src="images/maxBy.png" width="100%" alt="maxBy" />
       <figcaption><p>
        The <code>maxBy</code> operator is similar to <code>max</code>, but instead of emitting the
        item with the maximum value, it emits the item with the maximum <em>key</em>, where that
@@ -93,7 +93,7 @@ id: max
 
   {% lang_operator RxJS max maxBy %}
      <figure>
-      <img src="images/max.png" width="640" alt="max" />
+      <img src="images/max.png" width="100%" alt="max" />
       <figcaption><p>
        RxJS implements the <code>max</code> operator. It takes an optional comparer function that it
        will use instead of its default to compare the value of two items.</p>
@@ -110,7 +110,7 @@ Next: 9
 Completed</pre></div></figcaption>
      </figure>
      <figure>
-      <img src="images/maxBy.png" width="640" alt="maxBy" />
+      <img src="images/maxBy.png" width="100%" alt="maxBy" />
       <figcaption><p>
        The <code>maxBy</code> operator is similar to <code>max</code>, but instead of emitting the
        item with the maximum value, it emits the item with the maximum <em>key</em>, where that
