--- a/documentation/operators/refcount.html
+++ b/documentation/operators/refcount.html
@@ -14,7 +14,7 @@ id: refcount
 <h3>make a Connectable Observable behave like an ordinary Observable</h3>
 
 <figure>
- <img src="images/publishRefCount.c.png" width="640" alt="RefCount" />
+ <img src="images/publishRefCount.c.png" width="100%" alt="RefCount" />
  <figcaption><p>
   A <dfn>connectable Observable</dfn> resembles an ordinary Observable, except that it does not begin
   emitting items when it is subscribed to, but only when the <span class="operator">Connect</span>
@@ -56,7 +56,7 @@ id: refcount
 
   {% lang_operator RxGroovy refCount share %}
     <figure class="variant">
-     <img src="images/publishRefCount.png" width="640" alt="refCount" />
+     <img src="images/publishRefCount.png" width="100%" alt="refCount" />
      <figcaption><p>
       RxGroovy implements this operator as <code>refCount</code>.
      </p>
@@ -75,7 +75,7 @@ id: refcount
 
   {% lang_operator RxJava refCount share %}
     <figure class="variant">
-     <img src="images/publishRefCount.png" width="640" alt="refCount" />
+     <img src="images/publishRefCount.png" width="100%" alt="refCount" />
      <figcaption><p>
       RxJava implements this operator as <code>refCount</code>.
      </p>
@@ -94,7 +94,7 @@ id: refcount
 
   {% lang_operator RxJS refCount share shareValue %}
     <figure class="variant">
-     <img src="images/publishRefCount.png" width="640" alt="refCount" />
+     <img src="images/publishRefCount.png" width="100%" alt="refCount" />
      <figcaption><p>
       RxJava implements this operator as <code>refCount</code>.
      </p>
