--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -15,7 +15,7 @@ id: retry
        without error</h3>
 
    <figure>
-    <img src="images/retry.C.png" width="640" alt="Retry" />
+    <img src="images/retry.C.png" width="100%" alt="Retry" />
     <figcaption><p>
      The <span class="operator">Retry</span> operator responds to an <code>onError</code>
      notification from the source Observable by not passing that call through to its observers, but
@@ -46,7 +46,7 @@ id: retry
       RxCpp implements this operator as <code>retry</code>:
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        <code>retry</code> takes a single argument, a count of the number of times it should try
        resubscribing to the source Observable when it encounters errors. If this count is exceeded,
@@ -61,7 +61,7 @@ id: retry
       RxGroovy has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        One variant of <code>retry</code> takes no parameters. It will continue to resubscribe to and
        mirror the source Observable no matter how many <code>onError</code> notifications it
@@ -89,7 +89,7 @@ id: retry
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/retryWhen.f.png" width="640" alt="retryWhen" />
+      <img src="images/retryWhen.f.png" width="100%" alt="retryWhen" />
       <figcaption><p>
        The <code>retryWhen</code> operator is similar to <code>retry</code> but decides whether or
        not to resubscribe to and mirror the source Observable by passing the Throwable from the
@@ -115,7 +115,7 @@ id: retry
       RxJava has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        One variant of <code>retry</code> takes no parameters. It will continue to resubscribe to and
        mirror the source Observable no matter how many <code>onError</code> notifications it
@@ -143,7 +143,7 @@ id: retry
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/retryWhen.f.png" width="640" alt="retryWhen" />
+      <img src="images/retryWhen.f.png" width="100%" alt="retryWhen" />
       <figcaption><p>
        The <code>retryWhen</code> operator is similar to <code>retry</code> but decides whether or
        not to resubscribe to and mirror the source Observable by passing the Throwable from the
@@ -188,7 +188,7 @@ subscribing</pre></div>
       RxJS implements this operator as <code>retry</code>.
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        One variant of <code>retry</code> takes no parameters. It will continue to resubscribe to and
        mirror the source Observable no matter how many <code>onError</code> notifications it
@@ -220,7 +220,7 @@ subscribing</pre></div>
       RxKotlin has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        One variant of <code>retry</code> takes no parameters. It will continue to resubscribe to and
        mirror the source Observable no matter how many <code>onError</code> notifications it
@@ -240,7 +240,7 @@ subscribing</pre></div>
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/retryWhen.f.png" width="640" alt="retryWhen" />
+      <img src="images/retryWhen.f.png" width="100%" alt="retryWhen" />
       <figcaption><p>
        The <code>retryWhen</code> operator is similar to <code>retry</code> but decides whether or
        not to resubscribe to and mirror the source Observable by passing the Throwable from the
@@ -258,7 +258,7 @@ subscribing</pre></div>
       Rx.NET implements this operator as <code>Retry</code>.
      </p>
      <figure>
-      <img src="images/retry.C.png" width="640" alt="Retry" />
+      <img src="images/retry.C.png" width="100%" alt="Retry" />
       <figcaption><p>
        One variant of <code>Retry</code> takes no parameters. It will continue to resubscribe to and
        mirror the source Observable no matter how many <code>onError</code> notifications it
@@ -279,7 +279,7 @@ subscribing</pre></div>
       RxPY implements this operator as <code>retry</code>:
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        <code>retry</code> takes a single optional parameter, a count of the number of times it
        should try resubscribing to and mirroring the source Observable when it encounters errors. If
@@ -296,7 +296,7 @@ subscribing</pre></div>
       Rx.rb has two versions of this operator: <code>retry</code> and <code>retry_infinitely</code>.
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        <code>retry</code> takes a single optional parameter, a count of the number of times it
        should try resubscribing to and mirroring the source Observable when it encounters errors. If
@@ -316,7 +316,7 @@ subscribing</pre></div>
       RxScala has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
      <figure>
-      <img src="images/retry.png" width="640" alt="retry" />
+      <img src="images/retry.png" width="100%" alt="retry" />
       <figcaption><p>
        One variant of <code>retry</code> takes no parameters. It will continue to resubscribe to and
        mirror the source Observable no matter how many <code>onError</code> notifications it
@@ -336,7 +336,7 @@ subscribing</pre></div>
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/retryWhen.f.png" width="640" alt="retryWhen" />
+      <img src="images/retryWhen.f.png" width="100%" alt="retryWhen" />
       <figcaption><p>
        The <code>retryWhen</code> operator is similar to <code>retry</code> but decides whether or
        not to resubscribe to and mirror the source Observable by passing the Throwable from the
