--- a/documentation/operators/sample.html
+++ b/documentation/operators/sample.html
@@ -13,7 +13,7 @@ id: sample
    <h1>Sample</h1>
    <h3>emit the most recent items emitted by an Observable within periodic time intervals</h3>
    <figure>
-    <img src="images/sample.c.png" width="640" alt="Sample" />
+    <img src="images/sample.c.png" width="100%" alt="Sample" />
     <figcaption><p>
      The <span class="operator">Sample</span> operator periodically looks at an Observable and emits whichever
      item it has most recently emitted since the previous sampling.
@@ -55,7 +55,7 @@ id: sample
       Observable that results from this operator will emit no item for that sampling period.
      </p>
      <figure>
-      <img src="images/sample.png" width="640" alt="sample" />
+      <img src="images/sample.png" width="100%" alt="sample" />
       <figcaption><p>
        One variant of <code>sample</code> (or its alias, <code>throttleLast</code>) samples at a periodic time
        interval that you choose by passing in a <code>TimeUnit</code> and a quantity of such units as parameters
@@ -89,7 +89,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/sample.o.png" width="640" alt="sample" />
+      <img src="images/sample.o.png" width="100%" alt="sample" />
       <figcaption><p>
        There ia also a variant of <code>sample</code> (that does not have a <code>throttleLast</code> alias)
        that samples the source Observable each time a second Observable emits an item (or when it terminates).
@@ -103,7 +103,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/throttleFirst.png" width="640" alt="throttleFirst" />
+      <img src="images/throttleFirst.png" width="100%" alt="throttleFirst" />
       <figcaption><p>
        There is also a <code>throttleFirst</code> operator, which differs from
        <code>throttleLast</code>/<code>sample</code> in that it emits the <em>first</em> item emitted by the
@@ -158,7 +158,7 @@ Sequence complete</pre></div>
       Observable that results from this operator will emit no item for that sampling period.
      </p>
      <figure>
-      <img src="images/sample.png" width="640" alt="sample" />
+      <img src="images/sample.png" width="100%" alt="sample" />
       <figcaption><p>
        One variant of <code>sample</code> (or its alias, <code>throttleLast</code>) samples at a periodic time
        interval that you choose by passing in a <code>TimeUnit</code> and a quantity of such units as parameters
@@ -174,7 +174,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/sample.o.png" width="640" alt="sample" />
+      <img src="images/sample.o.png" width="100%" alt="sample" />
       <figcaption><p>
        There ia also a variant of <code>sample</code> (that does not have a <code>throttleLast</code> alias)
        that samples the source Observable each time a second Observable emits an item (or when it terminates).
@@ -188,7 +188,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/throttleFirst.png" width="640" alt="throttleFirst" />
+      <img src="images/throttleFirst.png" width="100%" alt="throttleFirst" />
       <figcaption><p>
        There is also a <code>throttleFirst</code> operator, which differs from
        <code>throttleLast</code>/<code>sample</code> in that it emits the <em>first</em> item emitted by the
@@ -210,7 +210,7 @@ Sequence complete</pre></div>
       RxJS implements this operator with two variants of <code>sample</code>.
      </p>
      <figure>
-      <img src="images/sample.png" width="640" alt="sample" />
+      <img src="images/sample.png" width="100%" alt="sample" />
       <figcaption><p>
        The first variant accepts as its parameter a periodicity, defined as an integer number of milliseconds,
        and it samples the source Observable periodically at that frequency.
@@ -232,7 +232,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/sample.o.png" width="640" alt="sample" />
+      <img src="images/sample.o.png" width="100%" alt="sample" />
       <figcaption><p>
        The second variant accepts as its parameter an Observable, and it samples the source Observable whenever
        this second Observable emits an item.
@@ -254,7 +254,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/throttleFirst.png" width="640" alt="throttleFirst" />
+      <img src="images/throttleFirst.png" width="100%" alt="throttleFirst" />
       <figcaption><p>
        There is also a <code>throttleFirst</code> operator, which differs from <code>sample</code> in that it
        emits the <em>first</em> item emitted by the source Observable in each sampling period rather than the
