--- a/documentation/operators/startwith.html
+++ b/documentation/operators/startwith.html
@@ -13,7 +13,7 @@ id: startwith
    <h1>StartWith</h1>
    <h3>emit a specified sequence of items before beginning to emit the items from the source Observable</h3>
    <figure>
-    <img src="images/startWith.C.png" width="640" alt="StartWith" />
+    <img src="images/startWith.C.png" width="100%" alt="StartWith" />
     <figcaption><p>
      If you want an Observable to emit a specific sequence of items before it begins emitting the
      items normally expected from it, apply the <span class="operator">StartWith</span> operator to it.
@@ -36,7 +36,7 @@ id: startwith
 
   {% lang_operator RxClojure cons %}
      <figure>
-      <img src="images/cons.png" width="640" alt="cons" />
+      <img src="images/cons.png" width="100%" alt="cons" />
       <figcaption><p>
        RxClojure implements this operator as <code>cons</code>. It takes an item and an Observable
        as parameters, and prepends the item to the items emitted by the Observable as its own
@@ -47,7 +47,7 @@ id: startwith
 
   {% lang_operator RxCpp start_with %}
      <figure>
-      <img src="images/start_with.png" width="640" alt="start_with" />
+      <img src="images/start_with.png" width="100%" alt="start_with" />
       <figcaption><p>
        RxCpp implements this operator as <code>start_with</code>. It takes an Observable and one
        or more items as parameters, and prepends these items, in the order they are given in the
@@ -61,7 +61,7 @@ id: startwith
       RxGroovy implements this operator as <code>startWith</code>.
      </p>
      <figure>
-      <img src="images/startWith.png" width="640" alt="startWith" />
+      <img src="images/startWith.png" width="100%" alt="startWith" />
       <figcaption><p>
        You can pass the values you want to prepend to the Observable sequence to
        <code>startWith</code> either in a single Iterable or as a series of one to nine function
@@ -90,7 +90,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/startWith.o.png" width="640" alt="startWith" />
+      <img src="images/startWith.o.png" width="100%" alt="startWith" />
       <figcaption><p>
        You can also pass <code>startWith</code> an Observable, and it will prepend the emissions
        from that Observable to those of the source Observable to make its own set of emissions. This
@@ -107,7 +107,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
       RxJava implements this operator as <code>startWith</code>.
      </p>
      <figure>
-      <img src="images/startWith.png" width="640" alt="startWith" />
+      <img src="images/startWith.png" width="100%" alt="startWith" />
       <figcaption><p>
        You can pass the values you want to prepend to the Observable sequence to
        <code>startWith</code> either in a single Iterable or as a series of one to nine function
@@ -119,7 +119,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/startWith.o.png" width="640" alt="startWith" />
+      <img src="images/startWith.o.png" width="100%" alt="startWith" />
       <figcaption><p>
        You can also pass <code>startWith</code> an Observable, and it will prepend the emissions
        from that Observable to those of the source Observable to make its own set of emissions.
@@ -133,7 +133,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
 
   {% lang_operator RxJS startWith %}
      <figure>
-      <img src="images/startWith.png" width="640" alt="startWith" />
+      <img src="images/startWith.png" width="100%" alt="startWith" />
       <figcaption><p>
        RxJS implements this operator as <code>startWith</code>. It accepts a variable number of
        function parameters and treats each one as an item that it will prepend to the resulting
@@ -158,7 +158,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
       RxKotlin implements this operator as <code>startWith</code>.
      </p>
      <figure>
-      <img src="images/startWith.png" width="640" alt="startWith" />
+      <img src="images/startWith.png" width="100%" alt="startWith" />
       <figcaption><p>
        You can pass the values you want to prepend to the Observable sequence to
        <code>startWith</code> either in a single Iterable or as a series of one to nine function
@@ -166,7 +166,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
       </p></figcaption>
      </figure>
      <figure>
-      <img src="images/startWith.o.png" width="640" alt="startWith" />
+      <img src="images/startWith.o.png" width="100%" alt="startWith" />
       <figcaption><p>
        You can also pass <code>startWith</code> an Observable, and it will prepend the emissions
        from that Observable to those of the source Observable to make its own set of emissions. This
@@ -177,7 +177,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
 
   {% lang_operator Rx.Net StartWith %}
      <figure>
-      <img src="images/startWith.C.png" width="640" alt="StartWith" />
+      <img src="images/startWith.C.png" width="100%" alt="StartWith" />
       <figcaption><p>
        Rx.NET implements this operator as <code>StartWith</code>. It accepts an array of items
        which it prepends to the resulting Observable sequence in the order they appear in the array
@@ -188,7 +188,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
 
   {% lang_operator RxPY start_with %}
      <figure>
-      <img src="images/start_with.png" width="640" alt="start_with" />
+      <img src="images/start_with.png" width="100%" alt="start_with" />
       <figcaption><p>
        RxPY implements this operator as <code>start_with</code>. It accepts an array of items which
        it prepends to the resulting Observable sequence in the order they appear in the array before
@@ -199,7 +199,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
 
   {% lang_operator Rx.rb start_with %}
      <figure>
-      <img src="images/start_with.png" width="640" alt="start_with" />
+      <img src="images/start_with.png" width="100%" alt="start_with" />
       <figcaption><p>
        Rx.rb implements this operator as <code>start_with</code>. It accepts an array of items which
        it prepends to the resulting Observable sequence in the order they appear in the array before
@@ -210,7 +210,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
 
   {% lang_operator RxScala +: %}
      <figure>
-      <img src="images/pluscolon.png" width="640" alt="plus colon" />
+      <img src="images/pluscolon.png" width="100%" alt="plus colon" />
       <figcaption><p>
        RxScala implements this operator with <code>+:</code> It takes an item and an Observable
        as parameters, and prepends the item to the items emitted by the Observable as its own
