--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -124,7 +124,7 @@ id: subscribe
     </ul>
 
     <figure>
-     <img src="images/B.forEach.png" width="640" alt="forEach">
+     <img src="images/B.forEach.png" width="100%" alt="forEach">
      <figcaption><p>
       There is also a <code>BlockingObservable</code> method called <code>forEach</code> that is somewhat
       similar. In order to use it, you must first convert your source Observable into a
@@ -201,7 +201,7 @@ id: subscribe
     </ul>
 
     <figure>
-     <img src="images/B.forEach.png" width="640" alt="forEach">
+     <img src="images/B.forEach.png" width="100%" alt="forEach">
      <figcaption><p>
       There is also a <code>BlockingObservable</code> method called <code>forEach</code> that is somewhat
       similar. In order to use it, you must first convert your source Observable into a
