--- a/documentation/operators/timer.html
+++ b/documentation/operators/timer.html
@@ -14,7 +14,7 @@ id: timer
 <h3>create an Observable that emits a particular item after a given delay</h3>
 
 <figure>
- <img src="images/timer.c.png" width="640" alt="Timer" />
+ <img src="images/timer.c.png" width="100%" alt="Timer" />
  <figcaption><p>
   The <span class="operator">Timer</span> operator creates an Observable that emits one particular
   item after a span of time that you specify.
@@ -48,7 +48,7 @@ id: timer
   {% lang_operator RxGroovy timer %}
     <p>In RxGroovy there are two versions of the <code>timer</code> operator.</p>
     <figure class="variant">
-     <img src="images/timer.png" width="640" alt="timer" />
+     <img src="images/timer.png" width="100%" alt="timer" />
      <figcaption><p>
       The first version of <code>timer</code> returns an Observable that emits a single number zero
       after a delay period you specify.
@@ -59,7 +59,7 @@ id: timer
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/timer.p.png" width="640" alt="timer" />
+     <img src="images/timer.p.png" width="100%" alt="timer" />
      <figcaption><p>
       There is also a version of <code>timer</code> that returns an Observable that emits a single
       zero after a specified delay, and then emits incrementally increasing numbers periodically
@@ -81,7 +81,7 @@ id: timer
   {% lang_operator RxJava timer %}
     <p>In RxJava there are two versions of the <code>timer</code> operator.</p>
     <figure class="variant">
-     <img src="images/timer.png" width="640" alt="timer" />
+     <img src="images/timer.png" width="100%" alt="timer" />
      <figcaption><p>
       The first version of <code>timer</code> returns an Observable that emits a single number zero
       after a delay period you specify.
@@ -92,7 +92,7 @@ id: timer
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/timer.p.png" width="640" alt="timer" />
+     <img src="images/timer.p.png" width="100%" alt="timer" />
      <figcaption><p>
       There is also a version of <code>timer</code> that returns an Observable that emits a single
       zero after a specified delay, and then emits incrementally increasing numbers periodically
@@ -114,7 +114,7 @@ id: timer
   {% lang_operator RxJS timer %}
     <p>In RxJS there are two versions of the <code>timer</code> operator.</p>
     <figure class="variant">
-     <img src="images/timer.j1.png" width="640" alt="timer" />
+     <img src="images/timer.j1.png" width="100%" alt="timer" />
      <figcaption><p>
       The first version of <code>timer</code> returns an Observable that emits a single item
       after a delay period you specify. You can specify the delay either as a <code>Date</code>
@@ -124,7 +124,7 @@ id: timer
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/timer.j2.png" width="640" alt="timer" />
+     <img src="images/timer.j2.png" width="100%" alt="timer" />
      <figcaption><p>
       There is also a version of <code>timer</code> that returns an Observable that emits a single
       item after a specified delay, and then emits items periodically thereafter on a specified
