--- a/documentation/operators/timestamp.html
+++ b/documentation/operators/timestamp.html
@@ -13,7 +13,7 @@ id: timestamp
    <h1>Timestamp</h1>
    <h3>attach a timestamp to each item emitted by an Observable indicating when it was emitted</h3>
    <figure>
-    <img src="images/timestamp.c.png" width="640" alt="Timestamp" />
+    <img src="images/timestamp.c.png" width="100%" alt="Timestamp" />
     <figcaption><p>
      The <span class="operator">Timestamp</span> operator attaches a timestamp to each item emitted by the
      source Observable before reemitting that item in its own sequence. The timestamp indicates at what time
@@ -44,7 +44,7 @@ id: timestamp
 
   {% lang_operator RxGroovy timestamp %}
      <figure>
-      <img src="images/timestamp.png" width="640" alt="timestamp" />
+      <img src="images/timestamp.png" width="100%" alt="timestamp" />
       <figcaption><p>
        The <code>timestamp</code> method converts an Observable that emits items of type <i>T</i> into one that
        emits objects of type <code>Timestamped&lt;<i>T</i>&gt;</code>, where each such object is stamped with
@@ -79,7 +79,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava timestamp %}
      <figure>
-      <img src="images/timestamp.png" width="640" alt="timestamp" />
+      <img src="images/timestamp.png" width="100%" alt="timestamp" />
       <figcaption><p>
        The <code>timestamp</code> method converts an Observable that emits items of type <i>T</i> into one that
        emits objects of type <code>Timestamped&lt;<i>T</i>&gt;</code>, where each such object is stamped with
@@ -98,7 +98,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS timestamp %}
      <figure>
-      <img src="images/timestamp.png" width="640" alt="timestamp" />
+      <img src="images/timestamp.png" width="100%" alt="timestamp" />
       <figcaption><p>
        The <code>timestamp</code> method attaches a timestamp to each item emitted by the source Observable
        before emitting that item as part of its own sequence. The timestamp indicates when the item was
